# mcp-siyuan

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  compose.yaml  docker-compose.sidecar.yml  healthcheck.py  komodo.toml  pyproject.toml
.claude/agent-memory/komodo-infra/: MEMORY.md  project_komodo_deploy.md
.claude/agent-memory/security-auditor/: MEMORY.md  project_mcp_siyuan.md
.github/: dependabot.yml
.github/workflows/: release.yml
mcp_siyuan/: __init__.py  __main__.py  auth.py  client.py  config.py  models.py  server.py
mcp_siyuan/idempotency/: __init__.py  cache.py
mcp_siyuan/observability/: __init__.py  context.py  diag_buffer.py  logging_setup.py  tracing.py
mcp_siyuan/tools/: export.py  read.py  smart.py  write.py
openspec/changes/add-keycloak-auth/: design.md  proposal.md  tasks.md
openspec/changes/add-keycloak-auth/specs/caddy-endpoint/: spec.md
openspec/changes/add-keycloak-auth/specs/mcp-auth/: spec.md
openspec/changes/add-keycloak-auth/specs/server-transport/: spec.md
openspec/changes/add-keycloak-auth/specs/sidecar-deployment/: spec.md
openspec/changes/add-pdf-export/: design.md
openspec/changes/archive/2026-05-07-add-move-rename-tools/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-07-add-move-rename-tools/specs/block-move/: spec.md
openspec/changes/archive/2026-05-07-add-pdf-export/: proposal.md  tasks.md
openspec/changes/archive/2026-05-07-add-pdf-export/specs/pdf-export/: spec.md
openspec/changes/archive/2026-05-07-scaffold-fastmcp-server/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-07-scaffold-fastmcp-server/specs/sidecar-deployment/: spec.md
openspec/changes/archive/2026-05-07-scaffold-fastmcp-server/specs/siyuan-client/: spec.md
openspec/changes/archive/2026-05-07-siyuan-mcp-reliability-fixes/: design.md  tasks.md
openspec/changes/archive/2026-05-07-siyuan-mcp-reliability-fixes/specs/request-observability/: spec.md
openspec/changes/archive/2026-05-07-siyuan-mcp-reliability-fixes/specs/write-idempotency/: spec.md
openspec/changes/siyuan-mcp-reliability-fixes/: proposal.md  tasks.md
openspec/specs/doc-move-rename/: spec.md
openspec/specs/read-query-tools/: spec.md
openspec/specs/server-transport/: spec.md
openspec/specs/write-tools/: spec.md
tests/: test_auth.py  test_client.py  test_config.py  test_fastmcp_version.py  test_health_diag.py  test_idempotency.py  test_models.py  test_observability.py  test_readme_tool_catalog.py  test_shelf_items.py  test_tools_export.py  test_tools_read.py  test_tools_smart.py  test_tools_write.py
