[project]
name = "mcp-siyuan"
version = "0.2.9"
description = "MCP server for SiYuan Notes built on FastMCP"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Casey Romkes" }]
dependencies = [
    # Pinned exactly for the No-approval-received RCA (openspec change
    # siyuan-mcp-reliability-fixes). Bump only after the upstream investigation
    # has identified or ruled out a FastMCP-version-dependent failure.
    "fastmcp==3.2.4",
    "httpx>=0.28.0",
    "pydantic>=2.10",
    "pydantic-settings>=2.12.0",
    "weasyprint>=63.0",
    "cachetools>=5.3",
    # Security floors (transitive deps of fastmcp; pinned to address CVEs)
    "authlib>=1.7.0",            # GHSA: CSRF in token cache handling
    "python-multipart>=0.0.27",  # GHSA: DoS via unbounded multipart headers
]

[project.scripts]
mcp-siyuan = "mcp_siyuan.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.34",
    "ruff>=0.8",
]
